fix: headerとrequest-buttonのz-indexを修正

--- a/WebContent/billboard/assets/css/style.css
+++ b/WebContent/billboard/assets/css/style.css
@@ -11,6 +11,7 @@ header {
   background-color: black;
   margin: 0;
   position: fixed;
+  z-index: 20;
 }
 
 .logo {
